[gd_scene load_steps=44 format=3 uid="uid://ujh51l2wv1vk"]

[ext_resource type="Script" uid="uid://2iaqywmqcahl" path="res://addons/3d_player_controller/player_3d.gd" id="1_f3dlg"]
[ext_resource type="PackedScene" uid="uid://cx7x0f3lh4aus" path="res://addons/virtual_controller/scenes/canvas_layer.tscn" id="2_j65kv"]
[ext_resource type="PackedScene" uid="uid://dv80q7jwkx20r" path="res://addons/3d_player_controller/debug.tscn" id="3_xex47"]
[ext_resource type="PackedScene" uid="uid://c714y0011rxmt" path="res://addons/3d_player_controller/y_bot.tscn" id="4_swcjt"]
[ext_resource type="PackedScene" uid="uid://bf6dhhwfpuau6" path="res://addons/3d_player_controller/pause.tscn" id="4_t2fvs"]
[ext_resource type="PackedScene" uid="uid://u2wxuwpmjwha" path="res://addons/3d_player_controller/emotes.tscn" id="5_icw06"]
[ext_resource type="Script" uid="uid://xf1vm85b12dr" path="res://addons/3d_player_controller/camera_3d.gd" id="5_j65kv"]
[ext_resource type="PackedScene" uid="uid://oatiyge81y5c" path="res://addons/3d_player_controller/chat_window.tscn" id="5_k4p2k"]
[ext_resource type="Script" uid="uid://bxskxesywooou" path="res://addons/3d_player_controller/states/climbing.gd" id="5_xlvyu"]
[ext_resource type="Script" uid="uid://br5fy64tx7tfn" path="res://addons/3d_player_controller/states/crawling.gd" id="6_72vy6"]
[ext_resource type="Script" uid="uid://b23wyc1lxy7ni" path="res://addons/3d_player_controller/states/base.gd" id="6_u38ru"]
[ext_resource type="PackedScene" uid="uid://b4e68syey7fke" path="res://addons/3d_player_controller/settings.tscn" id="7_1k1wo"]
[ext_resource type="Script" uid="uid://dgr1stgatu2la" path="res://addons/3d_player_controller/states/crouching.gd" id="7_2pwpa"]
[ext_resource type="Script" uid="uid://da2abedbjpere" path="res://addons/3d_player_controller/states/falling.gd" id="8_50ucx"]
[ext_resource type="Script" uid="uid://b1b2rgyyrsjig" path="res://addons/3d_player_controller/states/flying.gd" id="9_2t1yj"]
[ext_resource type="Texture2D" uid="uid://c4wibovgpj7xy" path="res://addons/3d_player_controller/assets/textures/reticle.png" id="10_0pvj7"]
[ext_resource type="Script" uid="uid://d31ddqb4hyuqm" path="res://addons/3d_player_controller/states/hanging.gd" id="10_eblo2"]
[ext_resource type="Script" uid="uid://dodroqwgmf811" path="res://addons/3d_player_controller/states/states.gd" id="10_x07tl"]
[ext_resource type="Texture2D" uid="uid://d4mgr48k52lu6" path="res://addons/3d_player_controller/assets/textures/game_icons/PNG/White/2x/audioOn.png" id="11_58nn8"]
[ext_resource type="Script" uid="uid://cyls4atmagils" path="res://addons/3d_player_controller/states/holding.gd" id="11_ekkl0"]
[ext_resource type="Script" uid="uid://drdtp8y8bxm65" path="res://addons/3d_player_controller/states/driving.gd" id="11_mcv3d"]
[ext_resource type="Script" uid="uid://qvcaqop34woy" path="res://addons/3d_player_controller/states/jumping.gd" id="12_bhakt"]
[ext_resource type="Script" uid="uid://c0qrjoqgy114k" path="res://addons/3d_player_controller/states/running.gd" id="13_4dmkx"]
[ext_resource type="Script" uid="uid://cgg7od35p2mlc" path="res://addons/3d_player_controller/states/sprinting.gd" id="14_f1f2u"]
[ext_resource type="Script" uid="uid://c7ko4ugxsmibr" path="res://addons/3d_player_controller/states/standing.gd" id="15_enyfd"]
[ext_resource type="Script" uid="uid://b6rci3sxt5iq3" path="res://addons/3d_player_controller/states/walking.gd" id="16_70kcl"]
[ext_resource type="Script" uid="uid://ckird2kckfr8r" path="res://addons/3d_player_controller/states/skateboarding.gd" id="16_s605i"]
[ext_resource type="Script" uid="uid://bxwk8hsio3fh4" path="res://addons/3d_player_controller/states/swimming.gd" id="17_kn3kj"]
[ext_resource type="Script" uid="uid://cssr4hanw302t" path="res://addons/3d_player_controller/states/paragliding.gd" id="21_0pvj7"]
[ext_resource type="Script" uid="uid://cdbvv0by1c45u" path="res://addons/3d_player_controller/states/pushing.gd" id="21_1p282"]
[ext_resource type="Script" uid="uid://de38jw4t4nf84" path="res://addons/3d_player_controller/states/ragdoll.gd" id="22_vdjk1"]
[ext_resource type="Script" uid="uid://bvqnuca8jxlep" path="res://addons/3d_player_controller/states/rolling.gd" id="25_pi7mm"]
[ext_resource type="Script" uid="uid://cvcle81qbqtdg" path="res://addons/3d_player_controller/states/sitting.gd" id="26_j6gid"]
[ext_resource type="Script" uid="uid://b3iodd70omtwq" path="res://addons/3d_player_controller/states/sliding.gd" id="28_ypjv0"]
[ext_resource type="Script" uid="uid://cjasnyqqvgkqj" path="res://addons/3d_player_controller/name_label.gd" id="31_ij4ox"]
[ext_resource type="PackedScene" uid="uid://dsp7vcraux38l" path="res://addons/3d_player_controller/x_bot.tscn" id="36_nin8p"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5e6s3"]
radius = 0.3
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nin8p"]
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("11_58nn8")
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_h7acy"]
material = SubResource("StandardMaterial3D_nin8p")
size = Vector2(0.3, 0.3)

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_ij4ox"]

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_j6gid"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8pp8g"]
height = 0.1
radius = 0.3

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_0pvj7"]
properties/0/path = NodePath(".:current_state")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Visuals/AuxScene/AnimationPlayer:current_animation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Visuals/AuxScene:position")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Visuals/AuxScene:rotation")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("NameLabel:text")
properties/6/spawn = true
properties/6/replication_mode = 2
properties/7/path = NodePath(".:steam_id")
properties/7/spawn = true
properties/7/replication_mode = 2
properties/8/path = NodePath(".:steam_username")
properties/8/spawn = true
properties/8/replication_mode = 2
properties/9/path = NodePath("ProximityChatIndicator:visible")
properties/9/spawn = true
properties/9/replication_mode = 2
properties/10/path = NodePath(".:is_using_x_bot")
properties/10/spawn = true
properties/10/replication_mode = 2

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_f3dlg")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
volume_db = -10.0

[node name="CameraMount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraMount"]
transform = Transform3D(1, 0, 0, 0, 0.9848078, 0.17364796, 0, -0.17364796, 0.9848078, 0, 0.5999999, 2.5)
script = ExtResource("5_j65kv")

[node name="Retical" type="Control" parent="CameraMount/Camera3D"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CameraMount/Camera3D/Retical"]
texture_filter = 1
layout_mode = 0
offset_left = -3.0
offset_top = -3.0
offset_right = 4.0
offset_bottom = 4.0
texture = ExtResource("10_0pvj7")
stretch_mode = 3

[node name="Emotes" parent="CameraMount/Camera3D" instance=ExtResource("5_icw06")]
visible = false

[node name="ChatWindow" parent="CameraMount/Camera3D" instance=ExtResource("5_k4p2k")]
visible = false
offset_left = 0.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 0.0

[node name="Debug" parent="CameraMount/Camera3D" instance=ExtResource("3_xex47")]
visible = false

[node name="Pause" parent="CameraMount/Camera3D" instance=ExtResource("4_t2fvs")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Settings" parent="CameraMount/Camera3D" instance=ExtResource("7_1k1wo")]
visible = false

[node name="RayCast3D" type="RayCast3D" parent="CameraMount/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5)
target_position = Vector3(0, 0, -2)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_5e6s3")

[node name="Controls" parent="." instance=ExtResource("2_j65kv")]

[node name="NameLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
billboard = 1
script = ExtResource("31_ij4ox")

[node name="ProximityChatIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)
visible = false
mesh = SubResource("QuadMesh_h7acy")

[node name="ProximityChatLocal" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, -0.1)
stream = SubResource("AudioStreamGenerator_ij4ox")

[node name="ProximityChatNetwork" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, -0.1)
stream = SubResource("AudioStreamGenerator_j6gid")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CylinderShape3D_8pp8g")
target_position = Vector3(0, -0.5, 0)

[node name="States" type="Node" parent="."]
script = ExtResource("10_x07tl")

[node name="Base" type="Node" parent="States"]
process_mode = 4
script = ExtResource("6_u38ru")

[node name="Climbing" type="Node" parent="States"]
process_mode = 4
script = ExtResource("5_xlvyu")

[node name="Crawling" type="Node" parent="States"]
process_mode = 4
script = ExtResource("6_72vy6")

[node name="Crouching" type="Node" parent="States"]
process_mode = 4
script = ExtResource("7_2pwpa")

[node name="Driving" type="Node" parent="States"]
process_mode = 4
script = ExtResource("11_mcv3d")

[node name="Falling" type="Node" parent="States"]
process_mode = 4
script = ExtResource("8_50ucx")

[node name="Flying" type="Node" parent="States"]
process_mode = 4
script = ExtResource("9_2t1yj")

[node name="Hanging" type="Node" parent="States"]
process_mode = 4
script = ExtResource("10_eblo2")

[node name="Holding" type="Node" parent="States"]
script = ExtResource("11_ekkl0")

[node name="Jumping" type="Node" parent="States"]
process_mode = 4
script = ExtResource("12_bhakt")

[node name="Paragliding" type="Node" parent="States"]
process_mode = 4
script = ExtResource("21_0pvj7")

[node name="Pushing" type="Node" parent="States"]
process_mode = 4
script = ExtResource("21_1p282")

[node name="Ragdoll" type="Node" parent="States"]
process_mode = 4
script = ExtResource("22_vdjk1")

[node name="Rolling" type="Node" parent="States"]
process_mode = 4
script = ExtResource("25_pi7mm")

[node name="Running" type="Node" parent="States"]
process_mode = 4
script = ExtResource("13_4dmkx")

[node name="Sitting" type="Node" parent="States"]
process_mode = 4
script = ExtResource("26_j6gid")

[node name="Sliding" type="Node" parent="States"]
process_mode = 4
script = ExtResource("28_ypjv0")

[node name="Skateboarding" type="Node" parent="States"]
process_mode = 4
script = ExtResource("16_s605i")

[node name="Sprinting" type="Node" parent="States"]
process_mode = 4
script = ExtResource("14_f1f2u")

[node name="Standing" type="Node" parent="States"]
script = ExtResource("15_enyfd")

[node name="Swimming" type="Node" parent="States"]
process_mode = 4
script = ExtResource("17_kn3kj")

[node name="Walking" type="Node" parent="States"]
process_mode = 4
script = ExtResource("16_70kcl")

[node name="Visuals" type="Node3D" parent="."]

[node name="AuxScene" parent="Visuals" instance=ExtResource("4_swcjt")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)
top_level = true

[node name="XBot" parent="Visuals" instance=ExtResource("36_nin8p")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0, 0, 0)
visible = false

[node name="YBot" parent="Visuals" instance=ExtResource("4_swcjt")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0, 0, 0)
visible = false

[node name="FootMount" type="Node3D" parent="Visuals"]

[node name="HeadMount" type="Node3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="RayCast3D_JumpTarget" type="RayCast3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, -0.6)

[node name="RayCast3D_InFrontPlayer_Top" type="RayCast3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
target_position = Vector3(0, 0, -1)

[node name="RayCast3D_InFrontPlayer_High" type="RayCast3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)
target_position = Vector3(0, 0, -1)

[node name="RayCast3D_InFrontPlayer_Middle" type="RayCast3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -1)

[node name="RayCast3D_InFrontPlayer_Use" type="RayCast3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -0.5)

[node name="RayCast3D_InFrontPlayer_Low" type="RayCast3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, -1)

[node name="RayCast3D_BelowPlayer" type="RayCast3D" parent="Visuals"]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_0pvj7")
